New jitpack yaml

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
-build:
-  steps:
-    - cd android
-    - ./gradlew build
+jdk:
+  - openjdk17
+install:
+  - ./android/gradlew -p android/ clean build
