--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -5,9 +5,9 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 appcompat = "1.7.0"
 material = "1.12.0"
-protobuf = "3.11.0"
+protobuf = "3.22.3"
 protobufGradle = "0.9.1"
-grpc = "1.41.0"
+grpc = "1.57.2"
 annotation = "1.3.2"
 
 [libraries]
@@ -16,8 +16,10 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
+protobuf-java = { group = "com.google.protobuf", name = "protobuf-java", version.ref = "protobuf" }
 protobuf-javalite = { group = "com.google.protobuf", name = "protobuf-javalite", version.ref = "protobuf" }
 grpc-okhttp = { group = "io.grpc", name = "grpc-okhttp", version.ref = "grpc" }
+grpc-protobuf = { group = "io.grpc", name = "grpc-protobuf", version.ref = "grpc" }
 grpc-protobuf-lite = { group = "io.grpc", name = "grpc-protobuf-lite", version.ref = "grpc" }
 grpc-stub = { group = "io.grpc", name = "grpc-stub", version.ref = "grpc" }
 javax-annotation = { group = "javax.annotation", name = "javax.annotation-api", version.ref = "annotation" }
